<resources>
    <string name="app_name">Google Map Callbacks</string>

    <!--LocationSwitcherActivity-->
    <string name="txt_latitude">Latitude</string>
    <string name="txt_longitude">Longitude</string>
    <string name="btn_set">set</string>
    <string name="txt_default_latitude">50.0647</string>
    <string name="txt_default_longitude">19.945</string>
    <string name="btn_back">back</string>
    <string name="btn_change_location">change location</string>
</resources>
